--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DevBlog - Julia Walker's Personal Blog</title>
+  <title>Chryslis International</title>
 
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   <!--
     - custom css link
@@ -39,8 +39,8 @@
       <nav class="navbar">
 
         <a href="#">
-          <img src="./assets/images/logo-light.svg" alt="Devblog's logo" width="150" class="logo-light">
-          <img src="./assets/images/logo-dark.svg" alt="Devblog's logo" width="150" class="logo-dark">
+          <img src="logo-light.svg" alt="Chryslis logo" width="150" class="logo-light">
+          <img src="logo-dark.svg" alt="Chryslis logo" width="150" class="logo-dark">
         </a>
 
         <div class="btn-group">
@@ -152,18 +152,18 @@
         <div class="left">
 
           <h1 class="h1">
-            Hi, I'm <b>Julia&nbsp;Walker</b>.
-            <br>Web Developer
+            Welcome To <b>Chryslis&nbsp;Blog</b>.
+            <br>
           </h1>
 
           <p class="h3">
-            Specialized in <abbr title="Accessibility">a11y</abbr>
-            and Core Web Vitals
+            A<abbr title="Accessibility">Student</abbr>
+            Blog
           </p>
 
           <div class="btn-group">
-            <a href="#" class="btn btn-primary">Contact Me</a>
-            <a href="#" class="btn btn-secondary">About Me</a>
+            <a href="#" class="btn btn-primary">Contact Us</a>
+            <a href="#" class="btn btn-secondary">About Us</a>
           </div>
 
         </div>
@@ -172,7 +172,7 @@
 
           <div class="pattern-bg"></div>
           <div class="img-box">
-            <img src="./assets/images/hero.png" alt="Julia Walker" class="hero-img">
+            <img src="hero.png" alt="Girl" class="hero-img">
             <div class="shape shape-1"></div>
             <div class="shape shape-2"></div>
           </div>
@@ -204,7 +204,7 @@
             <div class="blog-card">
 
               <div class="blog-card-banner">
-                <img src="./assets/images/blog-1.png" alt="Building microservices with Dropwizard, MongoDB & Docker"
+                <img src="blog-1.png" alt="Building microservices with Dropwizard, MongoDB & Docker"
                   width="250" class="blog-banner-img">
               </div>
 
