--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
           <div class="pattern-bg"></div>
           <div class="img-box">
-            <img src="hero.png" alt="Girl" class="hero-img">
+            <img src="1.png" alt="Logo" class="hero-img">
             <div class="shape shape-1"></div>
             <div class="shape shape-2"></div>
           </div>
@@ -214,7 +214,7 @@
 
                 <h3>
                   <a href="#" class="h3">
-                    Sadd
+                    Superman Changes Look : No Underwear Outside
                   </a>
                 </h3>
 
