--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="wrapper-flex">
 
                   <div class="profile-wrapper">
-                    <img src="author.png" alt="Girl" width="50">
+                    <img src="1.png" alt="Butterfly" width="50">
                   </div>
 
                   <div class="wrapper">
