--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="1.png" type="image/x-icon">
+  <link rel="shortcut icon" href="logos(1).png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -39,8 +39,8 @@
       <nav class="navbar">
 
         <a href="#">
-          <img src="2.png" alt="Chryslis logo" width="150" class="logo-light">
-          <img src="2.png" alt="Chryslis logo" width="150" class="logo-dark">
+          <img src="logo.png" alt="Chryslis logo" width="150" class="logo-light">
+          <img src="logo.png" alt="Chryslis logo" width="150" class="logo-dark">
         </a>
 
         <div class="btn-group">
