--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <nav class="navbar">
 
         <a href="#">
-          <img src="logo.png" alt="Chryslis logo" width="150" class="logo-light">
-          <img src="logo.png" alt="Chryslis logo" width="150" class="logo-dark">
+          <img src="logos.png" alt="Chryslis logo" width="150" class="logo-light">
+          <img src="logos.png" alt="Chryslis logo" width="150" class="logo-dark">
         </a>
 
         <div class="btn-group">
