--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="left">
 
           <h1 class="h1">
-            Welcome To <b>Chryslis&nbsp;Blog</b>.
+            Welcome To <b>Chryslis&nbsp;</b>.
             <br>
           </h1>
 
