--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DevBlog - Julia Walker's Personal Blog</title>
+  <title>Chryslis Blog</title>
 
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
   <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!--
     - google font link
@@ -39,8 +39,8 @@
       <nav class="navbar">
 
         <a href="#">
-          <img src="./assets/images/logo-light.svg" alt="Devblog's logo" width="150" class="logo-light">
-          <img src="./assets/images/logo-dark.svg" alt="Devblog's logo" width="150" class="logo-dark">
+          <img src="Logo.png" alt="Chryslis" width="150" class="logo-light">
+          <img src="./assets/images/logo-dark.svg" alt="Chryslis" width="150" class="logo-dark">
         </a>
 
         <div class="btn-group">
@@ -65,7 +65,7 @@
             </li>
 
             <li>
-              <a href="#" class="nav-link">About Me</a>
+              <a href="#" class="nav-link">About Us</a>
             </li>
 
             <li>
@@ -113,15 +113,15 @@
 
             <ul>
               <li class="nav-item">
-                <a href="#" class="nav-link">Database</a>
+                <a href="#" class="nav-link">Relationships</a>
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">Accessibility</a>
+                <a href="#" class="nav-link">Academics</a>
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">Web Performance</a>
+                <a href="#" class="nav-link">Social Life</a>
               </li>
             </ul>
 
@@ -152,18 +152,18 @@
         <div class="left">
 
           <h1 class="h1">
-            Hi, I'm <b>Julia&nbsp;Walker</b>.
-            <br>Web Developer
+            Welcome To <b>Chryslis&nbsp;</b>.
+            <br>
           </h1>
 
           <p class="h3">
-            Specialized in <abbr title="Accessibility">a11y</abbr>
-            and Core Web Vitals
+            A <abbr title="Accessibility">Student</abbr>
+            Creation
           </p>
 
           <div class="btn-group">
-            <a href="#" class="btn btn-primary">Contact Me</a>
-            <a href="#" class="btn btn-secondary">About Me</a>
+            <a href="#" class="btn btn-primary">Contact Us</a>
+            <a href="#" class="btn btn-secondary">About Us</a>
           </div>
 
         </div>
@@ -172,7 +172,7 @@
 
           <div class="pattern-bg"></div>
           <div class="img-box">
-            <img src="./assets/images/hero.png" alt="Julia Walker" class="hero-img">
+            <img src="Logo.png" alt="Julia Walker" class="hero-img">
             <div class="shape shape-1"></div>
             <div class="shape shape-2"></div>
           </div>
@@ -197,14 +197,14 @@
 
         <div class="blog">
 
-          <h2 class="h2">Latest Blog Post</h2>
+          <h2 class="h2">Latest Blog Posts</h2>
 
           <div class="blog-card-group">
 
             <div class="blog-card">
 
               <div class="blog-card-banner">
-                <img src="./assets/images/blog-1.png" alt="Building microservices with Dropwizard, MongoDB & Docker"
+                <img src="blog-1.png" alt="Building microservices with Dropwizard, MongoDB & Docker"
                   width="250" class="blog-banner-img">
               </div>
 
