--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <nav class="navbar">
 
         <a href="#">
-          <img src="Logo.png" alt="Chryslis" width="150" class="logo-light">
-          <img src="./assets/images/logo-dark.svg" alt="Chryslis" width="150" class="logo-dark">
+          <img src="Logowhite.png" alt="Chryslis" width="150" class="logo-light">
+          <img src="Logodark.png" alt="Chryslis" width="150" class="logo-dark">
         </a>
 
         <div class="btn-group">
@@ -152,13 +152,13 @@
         <div class="left">
 
           <h1 class="h1">
-            Welcome To <b>Chryslis&nbsp;</b>.
+             <b>Welcome&nbsp;</b>.
             <br>
           </h1>
 
           <p class="h3">
-            A <abbr title="Accessibility">Student</abbr>
-            Creation
+            This is a <abbr title="Accessibility">Student</abbr>
+            Blog
           </p>
 
           <div class="btn-group">
@@ -172,7 +172,7 @@
 
           <div class="pattern-bg"></div>
           <div class="img-box">
-            <img src="Logo.png" alt="Julia Walker" class="hero-img">
+            <img src="Logowhite.png" alt="Butterfly" class="hero-img">
             <div class="shape shape-1"></div>
             <div class="shape shape-2"></div>
           </div>
@@ -683,7 +683,7 @@
                 <ion-icon name="server-outline"></ion-icon>
               </div>
 
-              <p>Database</p>
+              <p>Academics</p>
             </a>
 
             <a href="#" class="topic-btn">
@@ -691,7 +691,7 @@
                 <ion-icon name="accessibility-outline"></ion-icon>
               </div>
 
-              <p>Accessibility</p>
+              <p>Relationships</p>
             </a>
 
             <a href="#" class="topic-btn">
@@ -699,7 +699,7 @@
                 <ion-icon name="rocket-outline"></ion-icon>
               </div>
 
-              <p>Web Performance</p>
+              <p>Hobbies</p>
             </a>
 
           </div>
@@ -710,14 +710,14 @@
 
             <div class="wrapper">
 
-              <button class="hashtag">#mongodb</button>
-              <button class="hashtag">#nodejs</button>
-              <button class="hashtag">#a11y</button>
-              <button class="hashtag">#mobility</button>
-              <button class="hashtag">#inclusion</button>
-              <button class="hashtag">#webperf</button>
-              <button class="hashtag">#optimize</button>
-              <button class="hashtag">#performance</button>
+              <button class="hashtag">#ded</button>
+              <button class="hashtag">#eded</button>
+              <button class="hashtag">#ded</button>
+              <button class="hashtag">#dede</button>
+              <button class="hashtag">#deded</button>
+              <button class="hashtag">#deded</button>
+              <button class="hashtag">#eqwfv</button>
+              <button class="hashtag">#fdavsvd</button>
 
             </div>
 
@@ -730,7 +730,7 @@
             <div class="wrapper">
 
               <p>
-                Do you want to learn more about how I can help your company overcome problems? Let us have a
+                Having any problems which are disturbing you? Need tricks to manage friends? Want a listener? Let us have a
                 conversation.
               </p>
 
@@ -803,12 +803,12 @@
       <div class="wrapper">
 
         <a href="#" class="footer-logo">
-          <img src="./assets/images/logo-light.svg" alt="DevBlog's Logo" width="150" class="logo-light">
-          <img src="./assets/images/logo-dark.svg" alt="DevBlog's Logo" width="150" class="logo-dark">
+          <img src="Logowhite.png" alt="Chryslis" width="150" class="logo-light">
+          <img src="Logodark.png" alt="Chryslis" width="150" class="logo-dark">
         </a>
 
         <p class="footer-text">
-          Learn about Web accessibility, Web performance, and Database management.
+          Good relationships are key to success
         </p>
 
       </div>
@@ -850,7 +850,7 @@
           </li>
 
           <li>
-            <a href="#" class="footer-link">Terms Of Use</a>
+            <a href="#" class="footer-link">Terms</a>
           </li>
 
         </ul>
@@ -860,7 +860,7 @@
     </div>
 
     <p class="copyright">
-      &copy; Copyright 2022 <a href="#">DevBlog</a>
+      &copy; Copyright 2023 <a href="#">Chryslis</a>
     </p>
 
   </footer>
@@ -872,7 +872,7 @@
   <!--
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="script.js"></script>
 
   <!--
     - ionicon link
