--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="logos(1).png" type="image/x-icon">
+  <link rel="shortcut icon" href="Logowhite.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -40,7 +40,7 @@
 
         <a href="#">
           <img src="Logowhite.png" alt="Chryslis" width="150" class="logo-light">
-          <img src="Logodark.png" alt="Chryslis" width="150" class="logo-dark">
+          <img src="Logodark(1).png" alt="Chryslis" width="150" class="logo-dark">
         </a>
 
         <div class="btn-group">
