--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 
         <a href="#" class="footer-logo">
           <img src="Logowhite.png" alt="Chryslis" width="150" class="logo-light">
-          <img src="Logodark.png" alt="Chryslis" width="150" class="logo-dark">
+          <img src="Logodark (1).png" alt="Chryslis" width="150" class="logo-dark">
         </a>
 
         <p class="footer-text">
