--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul class="desktop-nav">
 
             <li>
-              <a href="#" class="nav-link">Home</a>
+              <a href="https://chryslis-blog.vercel.app/" class="nav-link">Home</a>
             </li>
 
             <li>
