--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 
             <ul>
               <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
+                <a href="https://chryslis-blog.vercel.app/" class="nav-link">Home</a>
               </li>
 
               <li class="nav-item">
