--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </li>
 
             <li>
-              <a href="#" class="nav-link">About Us</a>
+              <a href="about.html" class="nav-link">About Us</a>
             </li>
 
             <li>
@@ -97,7 +97,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">About Me</a>
+                <a href="about.html" class="nav-link">About Me</a>
               </li>
 
               <li class="nav-item">
