--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             </li>
 
             <li>
-              <a href="#" class="nav-link">About Us</a>
+              <a href="about.html" class="nav-link">About Us</a>
             </li>
 
             <li>
@@ -93,11 +93,11 @@
 
             <ul>
               <li class="nav-item">
-                <a href="https://chryslis-blog.vercel.app/" class="nav-link">Home</a>
+                <a href="#" class="nav-link">Home</a>
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">About Me</a>
+                <a href="about.html" class="nav-link">About Me</a>
               </li>
 
               <li class="nav-item">
@@ -134,6 +134,11 @@
     </div>
 
   </header>
+
+
+
+
+
   <main>
 
     <!--
@@ -152,16 +157,50 @@
           </h1>
 
           <p class="h3">
-            Started By <abbr title="Accessibility">Students</abbr>
+            Started By<abbr title="Accessibility">Students</abbr>
           </p>
+
+          <div class="btn-group">
+            <a href="#" class="btn btn-primary">Contact Us</a>
+            <a href="#" class="btn btn-secondary">About Us</a>
+          </div>
+
         </div>
+
+        <div class="right">
+
+          <div class="pattern-bg"></div>
+          <div class="img-box">
+            <img src="Logowhite.png" alt="Butterfly" class="hero-img">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+          </div>
+
+        </div>
+
       </div>
+
     </div>
-    
-  <div class="main">
-    <a href="#">ABCD</a>
-  </div>
-  <div class="aside">
+
+
+
+
+
+    <div class="main">
+
+      <div class="container">
+
+        
+
+
+
+
+
+        <!--
+          - ASIDE
+        -->
+
+        <div class="aside">
 
           <div class="topics">
 
