--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="Logowhite.png" type="image/x-icon">
+  <link rel="shortcut icon" href="logos__1_-removebg-preview.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -172,7 +172,7 @@
 
           <div class="pattern-bg"></div>
           <div class="img-box">
-            <img src="Logowhite.png" alt="Butterfly" class="hero-img">
+            <img src="logos__1_-removebg-preview.png" alt="Butterfly" class="hero-img">
             <div class="shape shape-1"></div>
             <div class="shape shape-2"></div>
           </div>
