--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="left">
 
           <h1 class="h1">
-             <b>Welcome&nbsp;</b>.
+             <b>Welcome&nbsp;</b>
             <br>
           </h1>
 
@@ -737,7 +737,7 @@
               <ul class="social-link">
 
                 <li>
-                  <a href="#" class="icon-box discord">
+                  <a href="https://discord.gg/9VbDkCrFcG" class="icon-box discord">
                     <ion-icon name="logo-discord"></ion-icon>
                   </a>
                 </li>
@@ -771,9 +771,7 @@
               </p>
 
               <form action="#">
-                <input type="email" name="email" placeholder="Email Address" required>
-
-                <button type="submit" class="btn btn-primary">Subscribe</button>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScWNCftUsID99H3tYGvxrgoNx2cKhGnjukx1kVe1-jV7zyzfA/viewform?embedded=true" width="640" height="574" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
               </form>
 
             </div>
