--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chryslis Blog</title>
+  <title>Sollungo Maami</title>
 
   <!--
     - favicon
@@ -65,7 +65,7 @@
             </li>
 
             <li>
-              <a href="about.html" class="nav-link">About Us</a>
+              <a href="about.html" class="nav-link">About Me</a>
             </li>
 
             <li>
@@ -113,15 +113,15 @@
 
             <ul>
               <li class="nav-item">
-                <a href="#" class="nav-link">Relationships</a>
+                <a href="#" class="nav-link">Desserts</a>
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">Academics</a>
+                <a href="#" class="nav-link">Savouries</a>
               </li>
 
               <li class="nav-item">
-                <a href="#" class="nav-link">Social Life</a>
+                <a href="#" class="nav-link">South Indian</a>
               </li>
             </ul>
 
@@ -157,13 +157,13 @@
           </h1>
 
           <p class="h3">
-            This is a <abbr title="Accessibility">Student</abbr>
-            Blog
+            <abbr title="Accessibility">Home</abbr>
+            Blogger
           </p>
 
           <div class="btn-group">
-            <a href="#" class="btn btn-primary">Contact Us</a>
-            <a href="#" class="btn btn-secondary">About Us</a>
+            <a href="#" class="btn btn-primary">Contact Me</a>
+            <a href="#" class="btn btn-secondary">About Me</a>
           </div>
 
         </div>
@@ -858,7 +858,7 @@
     </div>
 
     <p class="copyright">
-      &copy; Copyright 2023 <a href="#">Chryslis</a>
+      &copy; Copyright 2023 <a href="#">Sollungo Maami</a>
     </p>
 
   </footer>
