--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <nav class="navbar">
 
         <a href="#">
-          <img src="Logowhite.png" alt="Chryslis" width="150" class="logo-light">
-          <img src="Logodark (1).png" alt="Chryslis" width="150" class="logo-dark">
+          <img src="kurma.png" alt="Sollungo Maami" width="150" class="logo-light">
+          <img src="kurma.png" alt="Sollungo Maami" width="150" class="logo-dark">
         </a>
 
         <div class="btn-group">
@@ -61,7 +61,7 @@
           <ul class="desktop-nav">
 
             <li>
-              <a href="https://chryslis-blog.vercel.app/" class="nav-link">Home</a>
+              <a href="https://sollungo-maami.vercel.app/" class="nav-link">Home</a>
             </li>
 
             <li>
@@ -157,7 +157,7 @@
           </h1>
 
           <p class="h3">
-            <abbr title="Accessibility">Home</abbr>
+            <abbr title="Sweets">Home</abbr>
             Blogger
           </p>
 
@@ -801,8 +801,8 @@
       <div class="wrapper">
 
         <a href="#" class="footer-logo">
-          <img src="Logowhite.png" alt="Chryslis" width="150" class="logo-light">
-          <img src="Logodark (1).png" alt="Chryslis" width="150" class="logo-dark">
+          <img src="kurma.png" alt="Chryslis" width="150" class="logo-light">
+          <img src="kurma.png" alt="Chryslis" width="150" class="logo-dark">
         </a>
 
         <p class="footer-text">
