--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <nav class="navbar">
 
         <a href="#">
-          <img src="logs.png" alt="Sollungo Maami" width="150" class="logo-light">
+          <img src="logwhite.png" alt="Sollungo Maami" width="150" class="logo-light">
           <img src="logs.png" alt="Sollungo Maami" width="150" class="logo-dark">
         </a>
 
