--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
           <div class="pattern-bg"></div>
           <div class="img-box">
-            <img src="log.png" alt="Butterfly" class="hero-img">
+            <img src="log.png" alt="Butterfly" class="logo-light">
             <div class="shape shape-1"></div>
             <div class="shape shape-2"></div>
           </div>
